--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Commerce</title>
-
-    <!-- Fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"> -->
+    
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
@@ -17,6 +15,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/solid.min.css" integrity="sha512-yDUXOUWwbHH4ggxueDnC5vJv4tmfySpVdIcN1LksGZi8W8EVZv4uKGrQc0pVf66zS7LDhFJM7Zdeow1sw1/8Jw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -41,7 +42,7 @@
       <div class="swiper-slide" id="home">
         <div class="home min-h-screen">
           <!-- Logo -->
-          <div class="w-4/12 mx-auto mt-[15%]">
+          <div class="w-4/12 mx-auto mt-[15%] to-aos" data-aos="zoom-in">
             <img src="image/logo.png" class="w-full" alt="add-commerce-logo">
           </div>
           <!-- Services -->
@@ -68,39 +69,39 @@
         <div class="about min-h-screen w-10/12 mx-auto">
           <!-- Title -->
           <div class="about-us-title relative w-fit mx-auto mt-[9%]">
-            <h1 class="capitalize text-white text-5xl tracking-wider font-medium">About Us</h1>
+            <h1 class="capitalize text-white text-5xl tracking-wider font-medium to-aos">About Us</h1>
             <div class="bottom-line absolute -bottom-2 right-0 bg-[#367CFF] w-[70%] h-1 rounded-xl text-right"></div>
           </div>
           <!-- Content -->
           <div class="flex w-full justify-between mt-16">
             <!-- Left -->
             <div class="w-7/12 mx-auto flex flex-col gap-10">
-              <div class="point-1 flex items-center">
+              <div class="point flex items-center">
                 <div class="w-2/12">
                   <div class="w-9/12">
                     <img src="image/share.png" alt="introduction" class="w-full">
                   </div>
                 </div>
-                <div class="w-10/12 about-text p-5 rounded-lg text-white text-[16px] tracking-widest h-fit">
+                <div class="w-10/12 about-text p-5 rounded-lg text-white text-[16px] tracking-widest h-fit hover:-translate-y-3 duration-300">
                   At ADD Commerce, we understand that the world of online retail is constantly evolving, and businesses or brand need innovative solutions to stay ahead of the competition.
                 </div>
               </div>
-              <div class="point-2 flex items-center">
+              <div class="point flex items-center">
                 <div class="w-2/12">
                   <div class="w-9/12">
                     <img src="image/idea.png" alt="introduction" class="w-full">
                   </div>
                 </div>
-                <div class="w-10/12 about-text p-5 rounded-lg text-white text-[16px] tracking-widest h-fit">
+                <div class="w-10/12 about-text p-5 rounded-lg text-white text-[16px] tracking-widest h-fit hover:-translate-y-3 duration-300">
                   Offering seamless designing, developing your online store to managing inventory, full communication and marketing plan, new social commerce management and providing exceptional customer service.                </div>
               </div>
-              <div class="point-3 flex items-center">
+              <div class="point flex items-center">
                 <div class="w-2/12">
                   <div class="w-9/12">
                     <img src="image/sales.png" alt="introduction" class="w-full">
                   </div>
                 </div>
-                <div class="w-10/12 about-text p-5 pb-10 rounded-lg text-white text-[16px] tracking-widest h-fit">
+                <div class="w-10/12 about-text p-5 pb-10 rounded-lg text-white text-[16px] tracking-widest h-fit hover:-translate-y-3 duration-300">
                   Build strong online presence, drive sales and exceed customer expectations with us !</div>
               </div>
             </div>
@@ -215,21 +216,22 @@
                   <h2 class="text-4xl font-bold text-center">Contact Us</h2>
                   <form class="mt-10">
                     <div class="user-box">
-                      <input type="text" name="name" required="" >
-                      <label>Name</label>
+                      <input id="name" type="text" name="name" required="" >
+                      <label for="name">Name</label>
                     </div>
                     <div class="user-box">
-                      <input type="text" name="email" required="">
-                      <label>Email</label>
+                      <input id="email" type="text" name="email" required="">
+                      <label for="email">Email</label>
                     </div>
                     <div class="user-box">
                       <textarea id="message-input" rows="4" cols="50" required=""></textarea>
                       <label>Message</label>
                     </div>
-                    <div class="w-fit ml-auto">
-                      <a href="#" class="px-4 py-2 w-fit">
+                    <div class="w-fit ml-auto ">
+                      <a href="#" class="px-4 py-2 w-fit font-semibold">
                           Send Message
                          <span></span>
+                         <i class="fa-solid fa-arrow-right-long"></i>
                       </a>
                     </div>
                   </form>
@@ -248,7 +250,10 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous" defer></script>
+  <!-- Aos -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
   <!-- Custom Sript -->
   <script src="script.js" defer></script>
+  
 </body>
 </html>
